--- a/style.css
+++ b/style.css
@@ -1,64 +1,72 @@
-@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap'); 
-html,body {
-    height: 100%;
-    width: 100%;
-}
-* {
-    box-sizing: border-box;
-  }
-  
-  body {
-    height: 100vh;
-    margin: 0;
-    font-family: 'Bangers', 'Helvetica';
-    display:grid;
-    background-color: rgb(202, 42, 42);
-    background-image: url('https://tse1.mm.bing.net/th?id=OIP.HxJweO9KeS4askAm64TxSgHaHa&pid=Api');
-    grid-template-columns: 1fr;
-    grid-template-rows: 100px 100px auto 50px 50px;
-    grid-template-areas: 
-        'h1'
-        'h2'
-        'qstn'
-        'choices'
-        'nav';
-  }
+@import url('https://fonts.googleapis.com/css2?family=Bangers&display=swap');
 
-h1{
+html,
+body {
+  height: 100%;
+  width: 100%;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+body {
+  height: 100vh;
+  margin: 0;
+  font-family: 'Bangers', 'Helvetica';
+  display: grid;
+  background-color: rgb(202, 42, 42);
+  background-image: url('https://tse1.mm.bing.net/th?id=OIP.HxJweO9KeS4askAm64TxSgHaHa&pid=Api');
+  grid-template-columns: 1fr;
+  grid-template-rows: 100px 100px auto 50px 50px;
+  grid-template-areas:
+    'h1'
+    'h2'
+    'qstn'
+    'choices'
+    'nav';
+}
+
+h1 {
   grid-area: h1;
   background-color: rgb(202, 42, 42);
   height: 100%;
   text-align: center;
   font-size: 40px;
   padding: 10px;
-} 
+}
 
-h2{
+h2 {
   grid-area: h2;
   background-color: rgb(0, 126, 223);
   height: 100%;
   text-align: center;
   padding: 25px;
 }
-.question-container{
+
+.question-container {
   grid-area: qstn;
   height: 100%;
-  background-color: aliceblue;
+  background-color: rgb(214, 231, 246);
   height: 300px;
   font-size: 25px;
   padding: 35px;
   text-align: center;
 }
-.option-container{
+
+.option-container {
   grid-area: choices;
   height: 100%;
   height: 50px;
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: aliceblue;
+  background-color: rgb(214, 231, 246);
 }
-.next,.begin, .choice{
+
+.next,
+.begin,
+.choice {
   background-color: black;
   color: white;
   border-radius: 25px;
@@ -68,25 +76,27 @@ h2{
   border-style: solid;
   border-color: black;
   height: 100%;
- 
+
 }
 
-.choice:hover{
+.choice:hover {
   background-color: green;
   color: white;
 
 }
-.next:hover{
+
+.next:hover {
   background-color: green;
   color: white;
 }
-.begin:hover{
+
+.begin:hover {
   background-color: green;
   color: white;
 }
 
 
-.navigation{
+.navigation {
   grid-area: nav;
   height: 100%;
   padding-top: 10px;
@@ -94,15 +104,15 @@ h2{
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: aliceblue;
- 
+  background-color: rgb(214, 231, 246);
+
 }
-.result{
+
+.result {
   height: 100%;
   font-size: 30px;
   height: 50px;
   text-align: center;
   padding: 20px;
-  background-color: aliceblue;
+  background-color: rgb(214, 231, 246);
 }
-
