wip:adds styling

--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ body {
 }
 
 body {
-  /* height: 100vh;
-  margin: 0; */
+  height: 100vh;
+  margin: 0;
   font-family: 'Bangers', 'Helvetica';
   /* display: grid;
   background-color: rgb(202, 42, 42); */ 
